--- a/aoc2018.cabal
+++ b/aoc2018.cabal
@@ -18,6 +18,7 @@ executable aoc
   build-depends:       base >= 4.7 && < 5,
                        extra,
                        array,
-                       containers
+                       containers,
+                       parsec
   other-modules:
     Util, Day1, Day2, Day3
