--- a/aoc2018.cabal
+++ b/aoc2018.cabal
@@ -21,4 +21,4 @@ executable aoc
                        containers,
                        parsec
   other-modules:
-    Util, Day1, Day2, Day3, Day4
+    Util, Day1, Day2, Day3, Day4, Day5
