--- a/aoc2018.cabal
+++ b/aoc2018.cabal
@@ -16,9 +16,7 @@ executable aoc
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       extra,
-                       array,
-                       containers,
-                       parsec
+                       extra, array, containers,
+                       parsec, data-ordlist, parsec3-numbers
   other-modules:
-    Util, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8
+    Util, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10
