--- a/aoc2018.cabal
+++ b/aoc2018.cabal
@@ -19,4 +19,4 @@ executable aoc
                        extra, array, containers,
                        parsec, data-ordlist, parsec3-numbers
   other-modules:
-    Util, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11
+    Util, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12
